# Xli

./: .gitignore  3RDPARTY.md  Android.mk  CMakeLists.txt  Doxyfile  LICENSE.md  README.md  Xli.cmake  XliAndroid.mk  build-android.bat  build-android.sh  build-cmake.sh  build-iOS.sh  build-ios.sh  build-mingw.bat  build-msvc.bat  build-vs2010.bat  build-vs2012.bat  build-vs2013.bat  build-xcode.sh  build.sh  install_dependencies-OSX.sh  install_dependencies-apt-get.sh  install_dependencies-aptitude.sh  install_dependencies-ios.sh  install_dependencies-osx.sh  install_dependencies.sh  install_sdl2.sh  install_sdl2_from_hg.sh
doc/: Doxyfile
examples/: CMakeLists.txt  build.sh
examples/AssetLoading/: CMakeLists.txt  Main.cpp
examples/AssetLoading/src/: Main.cpp
examples/AudioTest/: CMakeLists.txt  run-android.sh
examples/AudioTest/project-android/: AndroidManifest.xml
examples/AudioTest/src/: Main.cpp
examples/GLWindow/: CMakeLists.txt  Main.cpp  build-android.bat  build.sh  run-android.sh
examples/GLWindow/project-android/: AndroidManifest.xml
examples/GLWindow/project-cb/: GLWindow.cbp
examples/GLWindow/src/: Main.cpp
examples/HttpTest/: CMakeLists.txt  run-android.sh
examples/HttpTest/project-android/: AndroidManifest.xml
examples/HttpTest/src/: Main.cpp
src/Xli/: ArrayStream.cpp  BinaryReader.cpp  BinaryWriter.cpp  Buffer.cpp  BufferStream.cpp  CMakeLists.txt  Console.cpp  CoreLib.cpp  DataType.cpp  DateTime.cpp  Exception.cpp  File.cpp  FileSystem.cpp  Object.cpp  Path.cpp  Random.cpp  Stream.cpp  String.cpp  StringBuilder.cpp  Text.cpp  TextReader.cpp  TextStream.cpp  TextWriter.cpp  Thread.cpp  Traits.cpp  Unicode.cpp  Utf16String.cpp
src/Xli/posix/: PosixCond.cpp
src/Xli/pthread/: PthreadCond.cpp  PthreadMutex.cpp  PthreadThread.cpp
src/Xli/unix/: UnixTime.cpp
src/Xli/win32/: Win32Cond.cpp  Win32Mutex.cpp  Win32Thread.cpp  Win32Time.cpp
src/XliHttpClient/: CMakeLists.txt  Uri.cpp
src/XliHttpClient/android/: AHttpClient.cpp  AHttpClient.h
src/XliHttpClient/curl/: CurlHttpClient.cpp  CurlHttpClient.h
src/XliHttpClient/dummy/: DummyClient.cpp
src/XliHttpClient/ios/: CHttpClient.mm
src/XliPlatform/: Application.cpp  Bundle.cpp  CMakeLists.txt  Disk.cpp  MessageBox.cpp  PlatformLib.cpp  Window.cpp
src/XliPlatform/android/: ADisplay.cpp  AFileSystem.cpp  AInternal.h  AJniHelper.cpp  AJniHelper.h  AKeyEvent.h  AMessageBox.cpp  AShim.cpp  AShim.h  AStream.cpp  AStream.h  AWindow.cpp  CTKeyAction.h
src/XliPlatform/cocoa/: CocoaFileSystem.mm
src/XliPlatform/generic/: GenericBundle.cpp  GenericDialogs.cpp  GenericMessageBox.cpp
src/XliPlatform/ios/: iInit.mm
src/XliPlatform/posix/: PosixFileSystemBase.cpp  PosixFileSystemBase.h
src/XliPlatform/sdl2/: SDL2Display.cpp  SDL2Display_OSX.mm  SDL2Display_iOS.mm  SDL2MessageBox.cpp  SDL2Window.cpp  SDL2Window.h  SDL2Window_iOS.mm
src/XliPlatform/unix/: UnixFileSystemBase.cpp  UnixFileSystemBase.h
src/XliPlatform/win32/: Win32.cpp  Win32Dialogs.cpp  Win32Display.cpp  Win32FileSystem.cpp  Win32Helpers.cpp  Win32MessageBox.cpp  Win32Window.cpp  Win32Window.h
src/XliPlatform/xdg/: XdgFileSystem.cpp
src/XliSoundPlayer/: CMakeLists.txt
src/XliSoundPlayer/coreaudio/: CoreSoundPlayer.mm
src/XliSoundPlayer/opensles/: SlesSoundPlayer.cpp  SlesSoundPlayer.h
src/audio/: AudioBuffer.cpp  AudioStream.cpp  CMakeLists.txt  PAAudioBuffer.cpp  SampleReader.cpp  Sound.cpp  SoundChannel.cpp  SoundPortAudio.cpp  Wav.cpp  WavStream.cpp
src/audio/coreaudio/: CoreAudioSound.mm  CoreAudioSoundChannel.mm  CoreSimpleAudio.mm  SimpleChannel.mm
src/audio/opensles/: OldAudioBuffer.cpp  OldSimpleAudio.cpp  SimpleAudio.cpp  SimpleChannel.cpp  SlesSimpleAudio.cpp  SlesSound.cpp  SlesSoundChannel.cpp
src/audio/portaudio/: PAAudioBuffer.cpp
src/core/: Application.cpp  ArrayStream.cpp  BinaryReader.cpp  BinaryWriter.cpp  Buffer.cpp  BufferStream.cpp  Bundle.cpp  CMakeLists.txt  Console.cpp  DataType.cpp  DateTime.cpp  Disk.cpp  Exception.cpp  File.cpp  FileSystem.cpp  GLCheckError.cpp  Hash.cpp  Matrix3.cpp  Matrix4.cpp  MessageBox.cpp  NativeFileSystem.cpp  Object.cpp  Path.cpp  Quaternion.cpp  Random.cpp  Stream.cpp  String.cpp  StringBuilder.cpp  Text.cpp  TextReader.cpp  TextStream.cpp  TextWriter.cpp  Thread.cpp  ToString.cpp  Traits.cpp  Unicode.cpp  UpperLower.cpp  Utf16String.cpp  Window.cpp
src/core/android/: ADisplay.cpp  AFileSystem.cpp  AHttpClient.cpp  AInternal.cpp  AInternal.h  AJniHelper.cpp  AJniHelper.h  AMessageBox.cpp  AShim.cpp  AShim.h  AStream.cpp  AStream.h  AWindow.cpp  AXliJ.cpp  AXliJ.h  shimApkData.h
src/core/cocoa/: CocoaFileSystem.mm
src/features/: CMakeLists.txt
src/gl/: AGLContext.cpp  CMakeLists.txt  EGLContext.cpp  GLContext.cpp  GLFont.cpp  GLFontRenderer.cpp  GLFramebuffer.cpp  GLHelpers.cpp  GLProgram.cpp  GLTexture2D.cpp  GLXContext.cpp  SDL2Context.cpp  WGLContext.cpp
src/graphics/: ArrayBuffer.cpp  Atlas.cpp  AtlasBuilder.cpp  BitmapFont.cpp  BitmapFontBuilder.cpp  CMakeLists.txt  CompressedImage.cpp  Ktx.cpp  Mesh.cpp  Parameter.cpp  PsgReader.cpp  PsgWriter.cpp  Semantic.cpp  SpriteFont.cpp  Texture.cpp
src/http_client/: CMakeLists.txt  Uri.cpp
src/media/: Bitmap.cpp  CMakeLists.txt  CompressedImage.cpp  FontFace.cpp  Format.cpp  FormattedTextWriter.cpp  GZip.cpp  GZip2.cpp  Gzip.cpp  ImageReader.cpp  ImageWriter.cpp  JpegReader.cpp  JpegWriter.cpp  Json.cpp  Ktx.cpp  PngReader.cpp  PngWriter.cpp  Texture.cpp  UIImageReader.mm  Value.cpp  Xml.cpp  Zip.cpp
src/platform/: CMakeLists.txt  MessageBox.cpp  NativeFileSystem.cpp  Pipe.cpp  Profiling.cpp  Selector.cpp  Thread.cpp  TimedTrigger.cpp  Window.cpp
src/sound_player/: CMakeLists.txt
src/stdlib/: BinaryReader.cpp  BinaryWriter.cpp  Buffer.cpp  CMakeLists.txt  DataType.cpp  DateTime.cpp  Directory.cpp  File.cpp  FormattedTextWriter.cpp  Path.cpp  StringTools.cpp  Text.cpp  TextParser.cpp  TextReader.cpp  TextWriter.cpp  Value.cpp
src/vibrator/: CMakeLists.txt
tests/: CMakeLists.txt  test.sh
tests/XliHttpClient/: Uri_test.cpp
tests/core/: DateTime_test.cpp  Unicode_test.cpp  test.cpp
(+565 files in other folders)
